# cdk_ollama

./: .env_sample  README.md  app.py  cdk.context.json  pyproject.toml
cdk_ollama/: cdk_ollama_stack.py
continue_config_sample/: config_sample.json
tests/unit/: test_cdk_ollama_stack.py
